--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "css-loader": "^0.26.2",
+    "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.10.1",
     "style-loader": "^0.13.2",
     "url-loader": "^0.5.8",
